Dummy_Package_for_scratch_org/main/default/objects/Git_Backup__c/Git_Backup__c.object-meta.xml
<CustomObject>
    <description>A Git Snapshot record in Copado defines a connection between a Salesforce Org with a Git Repository/branch.</description>
    <label>Git Snapshot</label>
    <nameField>
        <label>Git Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Git Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>