Dummy_Package_for_scratch_org/main/default/objects/Git_Backup__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <description>Branch of the selected Git Repository (e.g. master). Snapshots and Commits done in the Git Snapshot will affect the specified branch.</description>
    <inlineHelpText>Git branch related to the Org. Be aware that branch names are case sensitive.</inlineHelpText>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>