Dummy_Package_for_scratch_org/main/default/objects/Git_Backup__c/fields/Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status__c</fullName>
    <description>Status of the most recent Compliance Scan of the Branch specified in the Git Snapshot.</description>
    <inlineHelpText>Status of the most recent Compliance Scan of the Branch specified in the Git Snapshot.</inlineHelpText>
    <label>Compliance Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>