Dummy_Package_for_scratch_org/main/default/objects/Git_Backup__c/fields/Git_Repository__c.field-meta.xml
<CustomField>
    <fullName>Git_Repository__c</fullName>
    <description>Git Repository linked to the Git Snapshot. The specified Branch must exist in the Git Repository.</description>
    <inlineHelpText>Git Repository linked to the Git Snapshot. The specified Branch must exist in the Git Repository.</inlineHelpText>
    <label>Git Repository</label>
    <referenceTo>Git_Repository__c</referenceTo>
    <relationshipLabel>Git Snapshots</relationshipLabel>
    <relationshipName>Git_Backups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>