Dummy_Package_for_scratch_org/main/default/objects/Git_Backup__c/fields/Git_Snapshot_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Git_Snapshot_Permissions__c</fullName>
    <label>Git Snapshot Permissions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allow Snapshots &amp; Commits</fullName>
                <default>true</default>
                <label>Allow Snapshots &amp; Commits</label>
            </value>
            <value>
                <fullName>Allow Snapshots Only</fullName>
            </value>
            <value>
                <fullName>Allow Commits Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>