Dummy_Package_for_scratch_org/main/default/objects/Git_Backup__c/fields/Last_Backup__c.field-meta.xml
<CustomField>
    <fullName>Last_Backup__c</fullName>
    <description>Date of the last Snapshot committed into the Branch.</description>
    <inlineHelpText>Date of the last Snapshot committed into the Branch.</inlineHelpText>
    <label>Last Snapshot</label>
    <type>DateTime</type>
</CustomField>