Dummy_Package_for_scratch_org/main/default/objects/Git_Backup__c/fields/Last_Compliance_Scan_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Compliance_Scan_Date__c</fullName>
    <description>Date of the last Compliance Scan of the Branch specified in the Git Snapshot.</description>
    <inlineHelpText>Date of the last Compliance Scan of the Branch specified in the Git Snapshot.</inlineHelpText>
    <label>Last Compliance Scan Date</label>
    <type>DateTime</type>
</CustomField>