Dummy_Package_for_scratch_org/main/default/objects/Git_Backup__c/fields/View_in_Git__c.field-meta.xml
<CustomField>
    <fullName>View_in_Git__c</fullName>
    <description>Link to the branch in your Git Repository.</description>
    <formula>HYPERLINK(
	IF(
		AND(NOT(ISNULL(Git_Repository__r.Branch_Base_URL__c)), Git_Repository__r.Branch_Base_URL__c != &apos;&apos;), 
		IF(
			AND(NOT(ISPICKVAL(Git_Repository__r.Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(Git_Repository__r.Git_Provider__c, &apos;Others&apos;))),
			Git_Repository__r.Branch_Base_URL__c +  Branch__c,
			IF(
				CONTAINS(Git_Repository__r.Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;),
				SUBSTITUTE(Git_Repository__r.Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,Branch__c),
				Git_Repository__r.Branch_Base_URL__c + Branch__c
			)
		),
	&apos;&apos;), 
	Branch__c
)</formula>
    <inlineHelpText>Link to the branch in your Git Repository.</inlineHelpText>
    <label>View in Git</label>
    <type>Text</type>
</CustomField>