Dummy_Package_for_scratch_org/main/default/objects/Git_Backup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>Frequency__c</columns>
    <columns>Git_Repository__c</columns>
    <columns>Org__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>